[package]
name = "fin"
version = "0.0.2"
description = "finite, NaN-free floiting point numbers. Not ready to be used yet!"
authors = ["tellen <matthias.tellen@gmail.com>"]
keywords = ["float", "NaN", "finite", "infinite"]
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = "^0.1.40"
lazy_static = "^0.2.9"
backtrace = "0.3.3"

[features]
bounded_float_debug_check = []